# BCM-Oscillation

./: CMakeLists.txt  README.md  closed_loop_double_pendulum.cpp  closed_loop_independent_pendulums.cpp  closed_loop_simulation.h  double_pendulum.h  firing_rate_distribution_analysis.py  independent_pendulums.h  mechanical_system.h  neural_network.cpp  neural_network.h  oscillation_analysis2.py  oscillation_fourier_analysis.py  recorder.h  trajectory_analysis.py  util.h
